# firstlight

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FILE_MANIFEST.md  PRODUCT.md  README.md  SAFETY.md  SECURITY.md  package-lock.json  package.json  playwright.config.ts
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260403_0001_public_release_baseline.py  20260520_0002_privacy_modes.py  20260615_0003_finding_user_action.py  20260703_0004_mcp_access.py  20260703_0005_active_ai_provider.py  20260722_0006_finding_plain_language.py
backend/app/: main.py  serve.py
backend/app/api/: router.py
backend/app/connectors/: base.py  clinicaltrials_connector.py  demo_catalog.json  demo_connector.py  europepmc_connector.py  http.py  openfda_connector.py  pubmed_connector.py  registry.py
backend/app/core/: config.py  logging.py  paths.py  release.py  security.py
backend/app/db/: base.py  migrations.py  session.py  types.py
backend/app/models/: __init__.py  finding.py  profile.py  run.py  (+1 more)
backend/scripts/: seed_demo.py
backend/tests/: test_audit_service.py  test_bootstrap_service.py  test_clinician_summary_service.py  test_connector_http.py  test_connectors.py  test_data_api.py  test_data_service.py  test_db_session.py  test_deidentification_service.py  test_encrypted_types.py  test_findings_service.py  test_health_service.py  test_heartbeat_service.py  test_llm_service.py  test_matching_service.py  test_mcp_gateway.py  test_migrations.py  test_monitoring_service.py  test_onboarding_flow.py  test_paths.py  test_plain_language_service.py  test_profile_ai_extraction.py  test_public_product_honesty.py  test_report_service.py  test_security.py  test_settings_service.py
(+176 files in other folders)
