[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncowatch-backend"
version = "0.1.0"
description = "Local FastAPI service for OncoWatch"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "httpx>=0.27,<1.0",
  "apscheduler>=3.10,<4.0",
  "platformdirs>=4.2,<5.0",
  "python-multipart>=0.0.9,<1.0",
  "reportlab>=4.2,<5.0",
  "cryptography>=43,<45"
]

[project.scripts]
oncowatch-backend = "app.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
