[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oncowatch-backend"
version = "0.2.5"
description = "Local FastAPI service for Firstlight (formerly OncoWatch)"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2.0",
  "fastapi>=0.115,<0.137",  # 0.137.0 regressed nested include_router with empty route paths (FastAPIError: Prefix and path cannot be both empty)
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "pydantic>=2.8,<3.0",
  "httpx>=0.27,<1.0",
  "apscheduler>=3.10,<4.0",
  "platformdirs>=4.2,<5.0",
  "python-multipart>=0.0.9,<1.0",
  "reportlab>=4.2,<5.0",
  "cryptography>=43,<45",
  "keyring>=25,<26"
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.11,<7.0"
]

[project.scripts]
oncowatch-backend = "app.serve:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
